syntax = "proto3";

package NAlice.NData;
option go_package = "a.yandex-team.ru/alice/protos/data";
option java_package = "ru.yandex.alice.protos.data";

import "mapreduce/yt/interface/protos/extension.proto";

message TLatLon {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    double Latitude = 1 [json_name = "latitude", (NYT.column_name) = "latitude"];
    double Longitude = 2 [json_name = "longitude", (NYT.column_name) = "longitude"];
}
